--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = "3.13.1"
 dependencies = [
-    "crewai (>=0.175.0,<0.176.0)"
+    "crewai (>=0.175.0,<0.176.0)",
+    "pybase64 (>=1.4.2,<2.0.0)"
 ]
 
 
